--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
-
+<script src="js/settings.js"></script>
 <script src="js/game.js"></script>
 
 </body>
