--- a/index.html
+++ b/index.html
@@ -186,12 +186,12 @@
 <script src="js/game.js"></script>
 <script src="js/upload.js"></script>
 <script src="js/util.js"></script>
+<script src="js/wizard.js"></script>
 <script src="js/colorize.js"></script>
 <script src="js/backend.js"></script>
-<script src="js/wizardSetup.js"></script>
+<script src="js/render.js"></script>
+<script src="js/debounce.js"></script>
+<script src="js/similar.js"></script>
 <script src="js/dialog.js"></script>
-<script src="js/setup.js"></script>
-
-
 </body>
 </html>
